--- a/src/app/features/shared-components/login/login.component.html
+++ b/src/app/features/shared-components/login/login.component.html
@@ -13,7 +13,7 @@
               class="placeholder-style border-2 w-48 border-t border-b border-r border-l leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-8"
               placeholder="Login"
               aria-label="Full name"
-              formControlName="login"
+              formControlName="userName"
             />
           </div>
 
@@ -34,7 +34,7 @@
         class="h-8 bg-gray-700 hover:bg-green-500 rounded-md hover:border-gray-400 border-gray-400 border-4 w-48 border-t border-b border-r border-l leading-tight text-white cursor-pointer disabled:bg-gray-300 disabled:border-0 disabled:h-8 text-normal"
         type="submit"
         (click)="signIn()"
-        [disabled]="_loginForm.invalid"
+        
       >
         Register
       </button>
