--- a/src/app/features/shared-components/register/register.component.html
+++ b/src/app/features/shared-components/register/register.component.html
@@ -94,10 +94,11 @@
     </div>
     <div class="flex justify-center">
       <button
-        class="flex-shrink-0 w-48 bg-transparent h-8 text-teal-500 hover:text-teal-800 text-sm py-1 px-2 rounded hover:text-sm hover:h-8 hover:border-2 hover:border-gray-500"
+        class="h-8 bg-gray-400 hover:bg-gray-600 rounded-md hover:border-gray-400 border-gray-400 border-4 w-48 border-t border-b border-r border-l leading-tight text-white cursor-pointer disabled:bg-gray-300 disabled:border-0 disabled:h-8 text-sm"
         type="button"
+        (click)="navigateToLogin()"
       >
-        <span>Back to home page</span>
+        <span>Back to login form</span>
       </button>
     </div>
 </mat-card>
