--- a/src/app/features/shared-components/register/register.component.html
+++ b/src/app/features/shared-components/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="w-full">
   <mat-card class="flex mt-28">
     <div class="inline-flex m-4">
-      <div class="w-1/4 h-full items-center flex">
+      <div class="w-1/4 h-80 items-center flex">
         <div class="inline-block w-full">
           <div class="row flex justify-center">
             <img src="../assets/images/user/user-register.svg" width="60" height="60" class="" alt="" />
@@ -9,8 +9,14 @@
           <div class="flex justify-center">
             <span class="text-2xl text-gray-200 font-extralight mt-1">Register</span>
           </div>
+          <div class="flex justify-center">
+            <img src="../assets/images/Completed.svg" width="150" height="80" class="" alt="" />
+          </div>
         </div>
       </div>
+
+      
+
 
       <div class="w-2/3 h-full items-center flex">
         <div class="inline-block h-full">
@@ -18,78 +24,22 @@
             <img src="../assets/images/inquiry-app-text/inquiry-app-text.svg" width="250" height="80" class="" alt="" />
           </div>
 
-          <div class="flex flex-row justify-center items-center h-2/3">
-            <form [formGroup]="registerForm" class="w-full max-w-sm flex flex-row justify-center novalidate" id="form">
-              <div class="justify-center">
-                <div class="flex flex-row pt-3">
-                  <div class="mt-2 mb-2 flex flex-row justify-center ml-7 items-center">
-                    <input
-                      class="box1 placeholder-style border-2 w-48 border-t border-b border-r border-l leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-9"
-                      type="text"
-                      placeholder="Login name *"
-                      aria-label="Login name"
-                      formControlName="{{ registerFormName.USERNAME }}"
-                    />
-                    <div class="flex items-center h-4 pl-2 tooltip_login" title="">
-                      <img src="../assets/images/info.svg" width="20" height="20" class="" alt="" />
-                    </div>
-                  </div>
-
-                  <div class="mt-2 mb-2 flex flex-row justify-center ml-7 items-center">
-                    <input
-                      class="box1 placeholder-style border-2 w-48 border-t border-b border-r border-l leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-9"
-                      type="email"
-                      placeholder="Email address *"
-                      aria-label="Full name"
-                      name="email"
-                      formControlName="{{ registerFormName.EMAIL }}"
-                      required
-                    />
-                    <div class="flex items-center h-4 pl-2 tooltip_email" title="">
-                      <img src="../assets/images/info.svg" width="20" height="20" class="" alt="" />
-                    </div>
-                  </div>
-                </div>
-                <div class="flex flex-row pt-3 pb-3">
-                  <div class="mt-2 mb-2 flex flex-row justify-center ml-7 items-center">
-                    <input
-                      class="box1 placeholder-style border-2 w-48 border-t border-b border-r border-l leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-9"
-                      placeholder="Password *"
-                      type="password"
-                      formControlName="{{ registerFormName.PASSWORD }}"
-                    />
-                    @if (isPasswordValid) {
-                      <div class="flex flex-row mb-8 text-center">
-                        <div class="tooltip" title="Email pattern not valid"></div>
-                      </div>
-                    }
-                    <div class="flex items-center h-4 pl-2 tooltip_password" title="">
-                      <img src="../assets/images/info.svg" width="20" height="20" class="" alt="" />
-                    </div>
-                  </div>
-
-                  <div class="mt-2 mb-2 flex flex-row justify-center ml-7 items-center">
-                    <input
-                      class="box1 placeholder-style border-2 w-48 border-t border-b border-r border-l leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-9"
-                      type="password"
-                      placeholder="Confirm Password *"
-                      aria-label="Confirm Password"
-                      formControlName="{{ registerFormName.PASSWORD_CONFIRMED }}"
-                    />
-                    <div class="flex items-center h-4 pl-2 tooltip_confirmed" title="">
-                      <img src="../assets/images/info.svg" width="20" height="20" class="" alt="" />
-                    </div>
-                  </div>
-                </div>
-
-                <div class="flex flex-row">
-                  <div class="flex flex-row">
+          @if (!isRegistred) {
+            <div class="flex flex-row justify-center items-center h-2/3">
+              <form
+                [formGroup]="registerForm"
+                class="w-full max-w-sm flex flex-row justify-center novalidate"
+                id="form"
+              >
+                <div class="justify-center">
+                  <div class="flex flex-row pt-3">
                     <div class="mt-2 mb-2 flex flex-row justify-center ml-7 items-center">
                       <input
                         class="box1 placeholder-style border-2 w-48 border-t border-b border-r border-l leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-9"
-                        placeholder="First name"
-                        aria-label="First name"
-                        formControlName="{{ registerFormName.FIRST_NAME }}"
+                        type="text"
+                        placeholder="Login name *"
+                        aria-label="Login name"
+                        formControlName="{{ registerFormName.USERNAME }}"
                       />
                       <div class="flex items-center h-4 pl-2 tooltip_login" title="">
                         <img src="../assets/images/info.svg" width="20" height="20" class="" alt="" />
@@ -99,28 +49,118 @@
                     <div class="mt-2 mb-2 flex flex-row justify-center ml-7 items-center">
                       <input
                         class="box1 placeholder-style border-2 w-48 border-t border-b border-r border-l leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-9"
-                        type="text"
-                        placeholder="Last name"
-                        aria-label="Last name"
-                        formControlName="{{ registerFormName.LAST_NAME }}"
+                        type="email"
+                        placeholder="Email address *"
+                        aria-label="Full name"
+                        name="email"
+                        formControlName="{{ registerFormName.EMAIL }}"
+                        required
                       />
                       <div class="flex items-center h-4 pl-2 tooltip_email" title="">
                         <img src="../assets/images/info.svg" width="20" height="20" class="" alt="" />
                       </div>
                     </div>
                   </div>
+                  <div class="flex flex-row pt-3 pb-3">
+                    <div class="mt-2 mb-2 flex flex-row justify-center ml-7 items-center">
+                      <input
+                        class="box1 placeholder-style border-2 w-48 border-t border-b border-r border-l leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-9"
+                        placeholder="Password *"
+                        type="password"
+                        formControlName="{{ registerFormName.PASSWORD }}"
+                      />
+                      @if (isPasswordValid) {
+                        <div class="flex flex-row mb-8 text-center">
+                          <div class="tooltip" title="Email pattern not valid"></div>
+                        </div>
+                      }
+                      <div class="flex items-center h-4 pl-2 tooltip_password" title="">
+                        <img src="../assets/images/info.svg" width="20" height="20" class="" alt="" />
+                      </div>
+                    </div>
+
+                    <div class="mt-2 mb-2 flex flex-row justify-center ml-7 items-center">
+                      <input
+                        class="box1 placeholder-style border-2 w-48 border-t border-b border-r border-l leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-9"
+                        type="password"
+                        placeholder="Confirm Password *"
+                        aria-label="Confirm Password"
+                        formControlName="{{ registerFormName.PASSWORD_CONFIRMED }}"
+                      />
+                      <div class="flex items-center h-4 pl-2 tooltip_confirmed" title="">
+                        <img src="../assets/images/info.svg" width="20" height="20" class="" alt="" />
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="flex flex-row">
+                    <div class="flex flex-row">
+                      <div class="mt-2 mb-2 flex flex-row justify-center ml-7 items-center">
+                        <input
+                          class="box1 placeholder-style border-2 w-48 border-t border-b border-r border-l leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-9"
+                          placeholder="First name"
+                          aria-label="First name"
+                          formControlName="{{ registerFormName.FIRST_NAME }}"
+                        />
+                        <div class="flex items-center h-4 pl-2 tooltip_login" title="">
+                          <img src="../assets/images/info.svg" width="20" height="20" class="" alt="" />
+                        </div>
+                      </div>
+
+                      <div class="mt-2 mb-2 flex flex-row justify-center ml-7 items-center">
+                        <input
+                          class="box1 placeholder-style border-2 w-48 border-t border-b border-r border-l leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-9"
+                          type="text"
+                          placeholder="Last name"
+                          aria-label="Last name"
+                          formControlName="{{ registerFormName.LAST_NAME }}"
+                        />
+                        <div class="flex items-center h-4 pl-2 tooltip_email" title="">
+                          <img src="../assets/images/info.svg" width="20" height="20" class="" alt="" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
+              </form>
+            </div>
+          } @else {
+            <div class="text-white items-center justify-center h-2/3 mb-5">
+              <div class="flex items-center h-full">
+                <img src="../assets/images/registred.svg" width="450" height="60" class="" alt="" />
               </div>
-            </form>
-          </div>
+            </div>
+          }
           <div class="border-t-0 border-r-0 border-l-0 border box11 mt-12 inline-flex ml-1"></div>
-          <div class="inline-flex justify-between w-full pl-3 pt-4">
-            <div class="">
-              @if (_showRegisterError) {
-                <div class="flex flex-row text-center items-center">
-                  <div class="tooltip flex items-center" title="Register has failed"></div>
-                </div>
-              }
+          @if (!isRegistred) {
+            <div class="inline-flex justify-between w-full pl-3 pt-4">
+              <div class="">
+                @if (_showRegisterError) {
+                  <div class="flex flex-row text-center items-center">
+                    <div class="tooltip flex items-center" title="Register has failed"></div>
+                  </div>
+                }
+                <button
+                  class="h-9 bg-gray-500 hover:bg-gray-700 rounded-md hover:border-gray-400 border-gray-400 border-4 w-48 border-t border-b border-r border-l leading-tight text-white cursor-pointer disabled:bg-gray-300 disabled:border-0 disabled:h-9 text-sm"
+                  type="button"
+                  (click)="navigateToLogin()"
+                >
+                  <span>Back to login</span>
+                </button>
+              </div>
+              <div class="pr-1">
+                <button
+                  class="h-9 bg-gray-700 hover:bg-green-500 rounded-md hover:border-gray-400 border-gray-400 border-4 w-48 border-t border-b border-r border-l leading-tight text-white cursor-pointer disabled:bg-gray-300 disabled:border-0 disabled:h-9 text-normal"
+                  type="submit"
+                  (click)="register()"
+                  [disabled]="registerForm.invalid || registerForm.errors?.['passwordMatchError']"
+                >
+                  Register
+                </button>
+              </div>
+            </div>
+          } @else {
+            <div class="flex justify-center pt-4">
               <button
                 class="h-9 bg-gray-500 hover:bg-gray-700 rounded-md hover:border-gray-400 border-gray-400 border-4 w-48 border-t border-b border-r border-l leading-tight text-white cursor-pointer disabled:bg-gray-300 disabled:border-0 disabled:h-9 text-sm"
                 type="button"
@@ -129,17 +169,7 @@
                 <span>Back to login</span>
               </button>
             </div>
-            <div class="pr-1">
-              <button
-                class="h-9  bg-gray-700 hover:bg-green-500 rounded-md hover:border-gray-400 border-gray-400 border-4 w-48 border-t border-b border-r border-l leading-tight text-white cursor-pointer disabled:bg-gray-300 disabled:border-0 disabled:h-9 text-normal"
-                type="submit"
-                (click)="register()"
-                [disabled]="registerForm.invalid || registerForm.errors?.['passwordMatchError']"
-              >
-                Register
-              </button>
-            </div>
-          </div>
+          }
         </div>
       </div>
     </div>
